# testito

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/skills/testito/: SKILL.md
.github/workflows/: ci.yml  release.yml
src/: auto.rs  db.rs  main.rs  md.rs  models.rs  routes.rs  storage.rs
templates/: base.html  compare.html  compare_test.html  feedback_item.html  home.html  run.html  run_body.html  runs_table.html
