[package]
name = "testito"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
askama = { version = "0.12", features = ["with-axum"] }
askama_axum = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
pulldown-cmark = { version = "0.10", default-features = false, features = ["html"] }
urlencoding = "2"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "warn"

[lints.clippy]
# `all` is the curated default-warn set. Opt out of style-only nags that aren't
# pulling weight in this codebase.
all = { level = "warn", priority = -1 }
explicit_iter_loop = "warn"
inefficient_to_string = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
